# Exact

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  BREAKING_CHANGES_LOG.md  CHANGELOG.md  CLA_entity.md  CLA_individual.md  CMakeLists.txt  CONTRIBUTING.md  Exact-PB2024.xlsx  InputFormats.md  LICENSE  README.md  compile_with_sha.sh  knapsack_allsolutions.py  knapsack_classic.py  pyproject.toml  python_test.py  setup.py  strength_analysis.csv  summary3.out
LS-SCIP-BIG-final-init/: 1.sh  CMakeLists.txt  Int.h  args.hxx  basis_pms.h  mScip.h  pms.cpp  pms_large.h  pms_small.h
LS-SCIP-BIG-final-init/scipoptsuite-8.1.0/: CMakeLists.txt
LS-SCIP-BIG-final-init/scipoptsuite-8.1.0/papilo/: papilo-config.cmake.in
LS-SCIP-BIG-final-init/scipoptsuite-8.1.0/papilo/src/papilo/core/: Problem.hpp
ci_docker_images/Ubuntu/: Dockerfile
cmake/: soplex_CMakeLists.txt.in  soplex_build_and_load.cmake
cmake/Modules/: FindCoinUtils.cmake
docker_images/ci/: Dockerfile  useful_commands
docker_images/pypi_package/: Dockerfile  build_in_docker.sh  useful_commands
python/: copy_headers.sh  install_package.sh  make_package.sh  manylinux package.txt  pyproject.toml  setup.py
python/exact/: README.md  __init__.py
python/exact/headers/: Exact.hpp  Global.hpp  ILP.hpp  Logger.hpp  Optimization.hpp  Options.hpp  Solver.hpp  Stats.hpp  auxiliary.hpp  parsing.hpp  quit.hpp  typedefs.hpp
python/exact/headers/constraints/: Constr.hpp  ConstrExp.hpp  ConstrExpPools.hpp  ConstrSimple.hpp
python/exact/headers/datastructures/: Heuristic.hpp  IntMap.hpp  IntSet.hpp  SolverStructs.hpp
python/exact/headers/propagation/: Equalities.hpp  Implications.hpp  LpSolver.hpp  Propagator.hpp
python/examples/: count.py  graph_coloring.py  knapsack_allsolutions.py  knapsack_classic.py  knapsack_implied.py  knapsack_propagate.py  knapsack_prune_domains.py  knapsack_runfull.py  logging.py  no_three_in_line.py  ramsey.py  run_all.sh
python/examples/graph_coloring/: graph_77v-7chrom_symmetries.txt  graph_coloring.py
python/examples/knapsack_tutorial/: 2_implications_low_level.py  4_assumptions.py
python/examples/qubo/: qubo.py  toruspm3-8-50
python/strength/: analyse.py  constraint_logic.py  generation.py  main.py  read_from_opb.py  small_strength_analysis.csv  strength_analysis.csv
python/strength/__pycache__/: mwsmethods.py
python_examples/: count.py  no_three_in_line.py  ramsey.py
python_examples/examples/: proof_logging.py  ramsey.py
python_examples/graph_coloring/: graph_coloring.py
python_examples/knapsack_tutorial/: 1_classic_knapsack.py  3_implications_simple.py  4_assumptions.py  5_onehot.py
python_examples/qubo/: qubo.py
src/: Constr.cpp  Constr.hpp  ConstrExp.cpp  ConstrExp.hpp  ConstrExpPools.cpp  ConstrExpPools.hpp  ConstrSimple.cpp  ConstrSimple.hpp  Equalities.cpp  Equalities.hpp  Exact.cpp  Exact.hpp  ExactPybind11.cpp  Global.hpp  Heuristic.cpp  Heuristic.hpp  ILP.cpp  ILP.hpp  Implications.cpp  Implications.hpp  IntProg.cpp  IntProg.hpp  IntSet.cpp  IntSet.hpp  Logger.cpp  Logger.hpp  LpSolver.cpp  LpSolver.hpp  Optimization.cpp  Optimization.hpp  Options.cpp  Options.hpp  Propagator.cpp  Propagator.hpp  PublicInterface.cpp  PublicInterface.hpp  Solver.cpp  Solver.hpp  SolverStructs.hpp  Stats.cpp  (+16 more)
src/constraints/: Constr.cpp  Constr.hpp  ConstrExp.cpp  ConstrExp.hpp  ConstrExpPools.cpp  ConstrExpPools.hpp  ConstrSimple.cpp  ConstrSimple.hpp
src/datastructures/: Heuristic.cpp  Heuristic.hpp  IntMap.hpp  IntSet.cpp  IntSet.hpp  SolverStructs.cpp  SolverStructs.hpp
src/doctest/: main.cpp
src/fodot/: Expression.cpp  Expression.hpp  Fodot.cpp  Fodot.hpp  IneqExpr.cpp  IneqExpr.hpp  Theory.cpp  Theory.hpp  auxiliary.hpp
src/propagation/: Equalities.cpp  Equalities.hpp  Implications.cpp  Implications.hpp  LpSolver.cpp  LpSolver.hpp  Propagator.cpp  Propagator.hpp
src/tests/: algorithms.cpp  inferences.cpp  input.cpp  interface.cpp  optimization.cpp
src/used_licenses/: add_license.py  licenses.cpp  licenses.hpp
test/: check_all.sh  kill_all.sh  run_all.sh  run_tests.sh  run_tests_arbitrary.sh  run_tests_binary.sh  run_tests_default.sh  run_tests_lazysum.sh  run_tests_log.sh  run_tests_mindiv.sh  run_tests_noassumps.sh  run_tests_noproof.sh  run_tests_optsimple.sh  run_tests_reified.sh  run_tests_rto.sh  run_tests_simple.sh  run_tests_slack+1.sh  run_tests_smallsum.sh  run_tests_sum.sh  test_veripb2.sh
test/coefficient_fitting/: 24-05-22___default_sol_mw_filtered.csv  24-05-22___default_sol_mw_filtered_more.csv  24-05-22___default_sol_mw_filtered_more_analyzed.csv  solver time analysis - no intercept ORIGINAL.R  solver time analysis - no intercept.R
test/generators/: pb_pigeon.py
test/instances/cnf/: edgecase1.cnf  simple.cnf
test/instances/lp/: hole.lp
test/instances/mps/: disctom.mps  issue_3.mps
test/instances/opb/debug/: normalized-opt-market-split_5_40_1.opb  normalized-vertexcover_opt_grid_oddrowevencolsquare_dim_072.opb
test/instances/opb/opt/: empty.opb  knapPI_16_1000_1000_1_-27147.opb  knapPI_2_100_10000_5_-34346.opb  mult.opb  normalized-mps-v2-20-10-neos15.opb  rs_iss_3.opb  testlin.opb  testnlc.opb  veripb2_test.opb
test/instances/opb/opt2/: factor-mod-size=5-P0=11-P1=2-P2=23-B.opb  factor-mod-size=5-P0=11-P1=31-P2=17-B.opb  factor-mod-size=5-P0=13-P1=13-B.opb  factor-mod-size=5-P0=17-P1=13-P2=11-P3=19-P4=11-P5=23-B.opb  factor-mod-size=5-P0=17-P1=13-P2=29-P3=11-B.opb  factor-mod-size=5-P0=17-P1=13-P2=29-P3=37-P4=23-B.opb  factor-mod-size=5-P0=17-P1=17-P2=13-P3=17-P4=29-B.opb  factor-mod-size=5-P0=17-P1=5-B.opb  factor-mod-size=5-P0=17-P1=7-P2=11-P3=17-P4=11-B.opb  factor-mod-size=5-P0=19-P1=23-P2=23-P3=23-B.opb  factor-mod-size=5-P0=19-P1=5-P2=7-P3=19-P4=29-P5=29-B.opb  factor-mod-size=5-P0=2-P1=23-P2=17-B.opb  (+495 more)
test/instances/wbo/: example1.wbo  example2.wbo  example3.wbo
test/instances/wcnf/: 414.wcsp.dir.wcnf  WCNF_pathways_p02.wcnf  archlinux.dimacs.wcnf  edgecases.wcnf  f49-DC_TotalLoss.seq-A-2-2-EDCBAir.wcnf  g2_n56e57_n61e85.wcnf  normalized-factor-size=9-P=383-Q=509.opb.wcnf  synthetic-20.wcnf
