[build-system]
requires = [
    "setuptools>=42",
    "pybind11>=2.10.0",
    "wheel",
    "boost"
]
build-backend = "setuptools.build_meta"

[project]
name = "Exact"
version = "2.1.0"
authors = [
    { name="Jo Devriendt", email="jo.devriendt@nonfictionsoftware.com" },
]
description = "Python bindings for Exact"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3"
]

[project.urls]
Homepage = "https://gitlab.com/nonfiction-software/exact"
Issues = "https://gitlab.com/nonfiction-software/exact/-/issues"
